test/files/neg/t200.check
t200.scala:7: error: method foo is defined twice;
  the conflicting method foo was defined at line 6:7
  def foo: Int;
      ^
one error found
